# basic-rsa

./: .gitignore  README.md  core.py  files.py  main.py  pkcs_encoding.py  prime_number_gen.py  pyproject.toml  rsa.py  small_primes.py
testdata/: 8255278f.pub  bfbd24ce.key  bfbd24ce.pub  test.txt  test.txt.sig
